--- a/PP.html
+++ b/PP.html
@@ -122,7 +122,7 @@ Processed_Data(processed_data_path)
 ```
 
 ```
-## # A tibble: 18,980 x 18
+## # A tibble: 6,734 x 15
 ##       V1  Year  Week StartDate  EndDate    Division    Dengue Dysentery
 ##    &lt;int&gt; &lt;int&gt; &lt;int&gt; &lt;date&gt;     &lt;date&gt;     &lt;chr&gt;        &lt;int&gt;     &lt;int&gt;
 ##  1     1  2006    52 2006-12-23 2006-12-29 Colombo         71         2
@@ -135,10 +135,9 @@ Processed_Data(processed_data_path)
 ##  8     8  2006    52 2006-12-23 2006-12-29 Hambanthota      1         1
 ##  9     9  2006    52 2006-12-23 2006-12-29 Matara          11         3
 ## 10    10  2006    52 2006-12-23 2006-12-29 Jaffna           0         0
-## # ... with 18,970 more rows, and 10 more variables: Encephalitis &lt;int&gt;,
+## # ... with 6,724 more rows, and 7 more variables: Encephalitis &lt;int&gt;,
 ## #   Enteric Fever &lt;int&gt;, Food Poisioning &lt;int&gt;, Leptospirosis &lt;int&gt;,
-## #   Typhus Fever &lt;int&gt;, Viral Hepatistis &lt;int&gt;, Human Rabies &lt;int&gt;,
-## #   Chickenpox &lt;int&gt;, Meningitis &lt;int&gt;, Leishmaniasis &lt;dbl&gt;
+## #   Typhus Fever &lt;int&gt;, Viral Hepatistis &lt;int&gt;, Human Rabies &lt;int&gt;
 ```
 
 ---
@@ -146,7 +145,7 @@ Processed_Data(processed_data_path)
 # DISC (DISease Counts) Package
 
 
-&lt;img src="Figures/F8.JPG" width="25%" height="25%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Figures/F8M.JPG" width="25%" height="25%" style="display: block; margin: auto;" /&gt;
 
 
 ```r
