--- a/PP.html
+++ b/PP.html
@@ -227,7 +227,7 @@ class: inverse center middle
 
 # Feature-based visualization
 
-&lt;img src="Figures/FB1.JPG" width="100%" height="80%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Figures/FB1.JPG" width="100%" height="40%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -318,7 +318,7 @@ Dengue_features
 
 # Feature-based visualization
 
-&lt;img src="Figures/FB3.JPG" width="80%" height="10%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Figures/FB3.JPG" width="60%" height="20%" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -1017,6 +1017,13 @@ ac_TRAIN_MASE
 # The best approach for forecasts in 2020 
 
 &lt;img src="Figures/MAP3.JPG" width="42%" height="10%" style="display: block; margin: auto;" /&gt;
+
+---
+
+# Visualization of model performance-Weekly series
+
+&lt;img src="PP_files/figure-html/unnamed-chunk-55-1.png" width="100%" /&gt;
+
 
 ---
 
